--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -8,4 +8,7 @@ header .header__content {
   margin: 0 auto;
   padding: 20px;
   text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
