--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
 <app-header></app-header>
+<div class="content-wrapper">
+  <div class="content-container">
+    <app-navigation></app-navigation>
+    <main></main>
+  </div>
+</div>
