--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,8 +1,8 @@
 <aside>
   <nav>
     <ul>
-      <li><a href="#home">მომხმარებლები</a></li>
-      <li><a href="#about">პოსტები</a></li>
+      <li><a href="#home" class="sidebar__users-btn">მომხმარებლები</a></li>
+      <li><a href="#about" class="sidebar__posts-btn">პოსტები</a></li>
     </ul>
   </nav>
 </aside>
