--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -2,7 +2,7 @@
   <nav>
     <ul>
       <li><a href="#home" class="sidebar__users-btn">მომხმარებლები</a></li>
-      <li><a href="#about" class="sidebar__posts-btn">პოსტები</a></li>
+      <li><a href="#posts" class="sidebar__posts-btn">პოსტები</a></li>
     </ul>
   </nav>
 </aside>
