Add user page link

--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,7 +1,9 @@
 <aside>
   <nav>
     <ul>
-      <li><a href="#home" class="sidebar__users-btn">მომხმარებლები</a></li>
+      <li>
+        <a routerLink="/users" class="sidebar__users-btn">მომხმარებლები</a>
+      </li>
       <li><a href="#posts" class="sidebar__posts-btn">პოსტები</a></li>
     </ul>
   </nav>
