--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,8 @@
 <div class="content-wrapper">
   <div class="content-container">
     <app-navigation></app-navigation>
-    <main></main>
+    <main>
+      <app-users></app-users>
+    </main>
   </div>
 </div>
