Update posts link tag

--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -4,7 +4,7 @@
       <li>
         <a routerLink="/users" class="sidebar__users-btn">მომხმარებლები</a>
       </li>
-      <li><a href="#posts" class="sidebar__posts-btn">პოსტები</a></li>
+      <li><a routerLink="/posts" class="sidebar__posts-btn">პოსტები</a></li>
     </ul>
   </nav>
 </aside>
