--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,8 @@
 <header>
   <div class="header__content">
-    <h1 class="header__title">UserBoard</h1>
+    <h1 class="header__title">
+      <a routerLink="/">UserBoard</a>
+    </h1>
     <time datetime="" class="header__date-time">{{ currentDateTime }}</time>
   </div>
 </header>
