--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -21,3 +21,22 @@ header .header__content {
 .header__title a:hover {
   text-decoration: underline;
 }
+
+/* Mobile styles */
+@media (max-width: 1023px) {
+  header .header__content,
+  .content-container {
+    max-width: 80%;
+    flex-direction: column;
+    gap: 1rem;
+    width: 80%;
+  }
+}
+
+/* Desktop styles */
+@media (min-width: 1024px) {
+  header .header__content {
+    max-width: 50%;
+    width: 50%;
+  }
+}
