--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,8 @@
   <div class="content-container">
     <app-navigation></app-navigation>
     <main>
-      <app-users></app-users>
+      <router-outlet></router-outlet>
     </main>
   </div>
 </div>
+<app-footer></app-footer>
